fixed the flexbox alignment! margin overrides align-items

--- a/styles/style.css
+++ b/styles/style.css
@@ -133,7 +133,6 @@ li {
 .tier {
     border-radius:1rem;
     border:1px solid white;
-    margin:auto;
     padding:3rem;
     background-color: rgba(176, 41, 39, 0.8);
     
@@ -141,7 +140,7 @@ li {
 
 .tierpic {
     width:100%;
-    max-height:30fr;
+    max-height:20fr;
     opacity:0.5;
 }
 
